--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/homepage.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/homepage.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Offender Locator</title>
     <!-- CSS only -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Signika+Negative:wght@700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="{% static 'css/homepage.css' %}">
+    <link rel="stylesheet" href="{% static 'css/homepage.css' %}">
+
 </head>
 <body>
     <div class="container-fluid">
@@ -20,7 +21,7 @@
             <div class="col-md-12 navbar">
                 <a href="/" class="logo navbar-brand text-white offset-md-2">Offender Locator</a>
                 <ul class="nav">
-                    <li class="nav-item active"><a href="#" class="nav-link">Home</a></li>
+                    <li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="/lookup" class="nav-link">Lookup</a></li>
                     <li class="nav-item"><a href="/filecomplaint" class="nav-link">File a Complaint</a></li>
                     <li class="nav-item"><a href="/login"class="nav-link">Admin</a></li>
@@ -37,7 +38,7 @@
                   <div class="carousel-item active">
                     <div class="info">
                         <h1>Offender Locator</h1>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem beatae similique, voluptatibus explicabo dolore cupiditate ducimus excepturi nam ipsa obcaecati natus culpa aliquid voluptas, impedit qui facere veniam rerum? Tempora.</p>
+                        <p>Search for an offender's details under the custody of Anabu II-F.</p>
                         </div>
                   </div>
                   <div class="carousel-item">
