--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookup.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookup.html
@@ -1,41 +1,66 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto:wght@100;300;400&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  
-  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-  <title>Offender Locator Lookup</title>
-  <script src="{% static 'JavaScript/script.js' %}"></script>
-</head>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    <title>Offender Locator Lookup</title>
+    <script src="{% static 'JavaScript/script.js' %}"></script>
+  </head>
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="/">Offender Locator</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburger" 
-            aria-controls="hamburger" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="hamburger">
-            <ul class="navbar-nav ms-auto text-center">
-              <li><a class="nav-link" href="/">Home</a></li>
-              <li><a class="nav-link" href="/lookup">Lookup</a></li>
-              <li><a class="nav-link" href="/filecomplaint">File a complaint</a></li>
-              <li><a class="nav-link" href="/login">Login</a></li>
-            </ul>
-        </div>
+      <a class="navbar-brand" href="/">Offender Locator</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#hamburger"
+        aria-controls="hamburger"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="hamburger">
+        <ul class="navbar-nav ms-auto text-center">
+          <li><a class="nav-link" href="/">Home</a></li>
+          <li><a class="nav-link" href="/lookup">Lookup</a></li>
+          <li>
+            <a class="nav-link" href="/filecomplaint">File a complaint</a>
+          </li>
+          <li><a class="nav-link" href="/login">Admin</a></li>
+        </ul>
+      </div>
     </nav>
-    <hr>
+
+    <hr />
+
     <div class="container-lg">
       <h3>Directions:</h3>
+
       <li>
         Search for an offender's location and release date if they are
         incarcerated and under the custody of the Barangay Anabu II-F City Hall,
@@ -44,24 +69,38 @@
       </li>
       <li>Type the Full name of the Offender.</li>
       <li>Click the search button to see results.</li>
-      <hr>
+      <hr />
       <h2>Required Information</h2>
-      
-        <form>
-          {% csrf_token %}
-          <div class="row">
-            <div class="col-md-4 col-sm-12" id="lookupfname">
-              <label for="searchName" style="color: #eeee;">Offender's Full Name:</label>
-              <input type="text" class="form-control" name="searchName" id="searchName" placeholder="John Doe" required>
-            </div>
-            <div>
-              <button type="button" class="btn btn-outline-dark" onclick="checkSearch()"><i class="fas fa-search"></i> Search</button>
-            </div>
+
+      <form>
+        {% csrf_token %}
+        <div class="row">
+          <div class="col-md-4 col-sm-12" id="lookupfname">
+            <label for="searchName" style="color: #eeee"
+              >Offender's Full Name:</label
+            >
+            <input
+              type="text"
+              class="form-control"
+              name="searchName"
+              id="searchName"
+              placeholder="John Doe"
+              required
+            />
           </div>
-        </form>
-      
+          <div>
+            <button
+              type="button"
+              class="btn btn-outline-dark"
+              onclick="checkSearch()"
+            >
+              <i class="fas fa-search"></i> Search
+            </button>
+          </div>
+        </div>
+      </form>
     </div>
-    <hr style="margin-top: 5%;">
+    <hr style="margin-top: 5%" />
     <div class="container-lg">
       <h2>SEARCH RESULTS:</h2>
       <div class="table-responsive-admin">
@@ -74,41 +113,49 @@
               <th scope="col">Gender</th>
               <th scope="col">Offense</th>
               <th scope="col">Case Status</th>
+              <th scope="col">Date of Complaint</th>
               <th scope="col">Action</th>
+              
             </tr>
           </thead>
           <tbody>
-            {% for items in data1 %}
-            <tr>
-              <td>{{items.offender}}</td>
-              <td>{{items.id}}</td>
-              <td>{{items.age}}</td>
-              <td>{{items.gender}}</td>
-              <td>{{items.offense}}</td>
-              <td>{{items.caseStatus}}</td>
-              <td><input type="hidden" name="getID" value="{{items.id}}">
-              <a href="/viewdetails" class="btn btn-primary">View Details</a>
-              </td>
-            </tr>
-            {% endfor %}
-        </tbody>
+            <form method="POST" action="">
+              {% csrf_token %}
+              {% for items in data1 %}
+              <tr>
+                <td>{{items.offender}}</td>
+                <td>{{items.id}}</td>
+                <td>{{items.age}}</td>
+                <td>{{items.gender}}</td>
+                <td>{{items.offense}}</td>
+                <td>{{items.caseStatus}}</td>
+                <td>{{items.datenow}}</td>
+                <td>
+                  {% comment %} <a type="submit" class="btn btn-primary">View Details</a> {% endcomment %}
+                  <button name="submitBtn" value="{{items.id}}" type="submit" class="btn btn-primary">View Details </button>
+                </td>
+              </tr>
+              {% endfor %}
+            </form>
+          </tbody>
         </table>
       </div>
     </div>
 
-    <hr>
-    
-    <div class="container-lg" style="padding-bottom: 3%;">
+    <hr />
+
+    <div class="container-lg" style="padding-bottom: 3%">
       <h2>Disclaimer:</h2>
       <p>
-        The information shown in the offender locator is updated daily and reflects the most recent data available.
-        Specific questions regarding an offender's sentence cannot be discussed with the general public.
+        The information shown in the offender locator is updated daily and
+        reflects the most recent data available. Specific questions regarding an
+        offender's sentence cannot be discussed with the general public.
       </p>
     </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-  crossorigin="anonymous"> </script>
-  
-
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
