--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/viewdetails.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/viewdetails.html
@@ -1,3 +1,31 @@
+Skip to content
+Search or jump to…
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@Askeladdxx 
+renshisena
+/
+OffenderLocator
+Public
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+OffenderLocator/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/release.html
+@Askeladdxx
+Askeladdxx added functions
+Latest commit 939c8d8 19 hours ago
+ History
+ 1 contributor
+125 lines (116 sloc)  4.47 KB
+   
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
@@ -7,7 +35,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Transfer Form</title>
+    <title>Release Form</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <style type="text/css" media="print">
@@ -26,7 +54,7 @@
         
         <div class="row" id="nomargin">
             <div class="col-md-12">
-                <h2>TRANSFER FORM</h2>
+                <h2>Release FORM</h2>
             </div>
         </div>
         <div class="row" id="nomargin" id="nomargin">
@@ -36,15 +64,16 @@
                         <p><strong>Name :</strong></p>
                     </div>
                     <div class="col-md-6">
-                        <p> {{i.offender}}</p>
-                    </div>
+                        
+                        <p>{{i.offender}}</p>
+                    </div> 
                 </div>
                 <div class="row" id="nomargin">
                     <div class="col-md-4">
                         <p><strong>Age:</strong>
                     </div>
                     <div class="col-md-6">
-                        <p> {{i.age}} </p>
+                        <p>{{i.age}}</p>
                     </div>
                 </div>
                 <div class="row" id="nomargin">
@@ -52,7 +81,7 @@
                         <p><strong>Gender:</strong>
                     </div>
                     <div class="col-md-6">
-                        <p> {{i.gender}}</p> 
+                        <p>{{i.gender}}</p> 
                     </div>
                 </div>
                 <div class="row" id="nomargin">
@@ -60,7 +89,7 @@
                         <p><strong>Case ID:</strong>
                     </div>
                     <div class="col-md-6">
-                        <p> {{i.id}}</p>
+                        <p>{{i.id}}</p>
                     </div>
                 </div>
                 <div class="row" id="nomargin">
@@ -68,7 +97,7 @@
                         <p><strong>Case:</strong>
                     </div>
                     <div class="col-md-6">
-                        <p> {{i.offense}}</p>
+                        <p>{{i.offense}}</p>
                     </div>
                 </div>
             </div>
@@ -83,7 +112,7 @@
                 </div>
                 <div class="row" id="nomargin">
                     <div class="col-md">
-                        <p><strong>Date of Transfer:</strong>
+                        <p><strong>Date of Release:</strong>
                     </div>
                     <div class="col-md">
                        <p>______________________</p>
@@ -92,7 +121,7 @@
             </div>
         </div>
         <h3>Case Description:</h3>
-            <p> {{i.caseDetails}}</p>    
+            <p>{{i.caseDetails}}</p>    
 
 
         <div class="row" id="nomargin">
@@ -110,7 +139,7 @@
             </div>
         </div>
     </div>
-    
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
      <script type="text/javascript">
@@ -122,3 +151,16 @@
     
 </body>
 </html>
+© 2022 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+Loading complete
