--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/viewdetails.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/viewdetails.html
@@ -1,31 +1,3 @@
-Skip to content
-Search or jump to…
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@Askeladdxx 
-renshisena
-/
-OffenderLocator
-Public
-Code
-Issues
-Pull requests
-Actions
-Projects
-Wiki
-Security
-Insights
-OffenderLocator/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/release.html
-@Askeladdxx
-Askeladdxx added functions
-Latest commit 939c8d8 19 hours ago
- History
- 1 contributor
-125 lines (116 sloc)  4.47 KB
-   
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
@@ -35,7 +7,7 @@ Latest commit 939c8d8 19 hours ago
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Release Form</title>
+    <title>Case Details</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <style type="text/css" media="print">
@@ -47,25 +19,25 @@ Latest commit 939c8d8 19 hours ago
 
     <div class="container-fluid">
         <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="welcome.html">Offender Locator</a>
+            <a class="navbar-brand" href="/">Offender Locator</a>
             <ul class="navbar-nav ms-auto text-center">
                 <li><a class="nav-link" href="" onclick="printRelease()"><img src="{% static 'Media/printer.png' %}" alt="Print File" height="30px" width="30px"></a></li>
         </nav>
         
         <div class="row" id="nomargin">
             <div class="col-md-12">
-                <h2>Release FORM</h2>
+                <h2>CASE DETAILS</h2>
             </div>
         </div>
+        {% for data in tableoff %}
         <div class="row" id="nomargin" id="nomargin">
             <div class="col-md-5">
                 <div class="row" id="nomargin">
                     <div class="col-md-4">
-                        <p><strong>Name :</strong></p>
+                        <p><strong>Name: </strong> </p>
                     </div>
                     <div class="col-md-6">
-                        
-                        <p>{{i.offender}}</p>
+                        <p>{{data.offender}}</p>
                     </div> 
                 </div>
                 <div class="row" id="nomargin">
@@ -73,7 +45,7 @@ Latest commit 939c8d8 19 hours ago
                         <p><strong>Age:</strong>
                     </div>
                     <div class="col-md-6">
-                        <p>{{i.age}}</p>
+                        <p>{{data.age}}</p>
                     </div>
                 </div>
                 <div class="row" id="nomargin">
@@ -81,7 +53,7 @@ Latest commit 939c8d8 19 hours ago
                         <p><strong>Gender:</strong>
                     </div>
                     <div class="col-md-6">
-                        <p>{{i.gender}}</p> 
+                        <p>{{data.gender}}</p> 
                     </div>
                 </div>
                 <div class="row" id="nomargin">
@@ -89,7 +61,7 @@ Latest commit 939c8d8 19 hours ago
                         <p><strong>Case ID:</strong>
                     </div>
                     <div class="col-md-6">
-                        <p>{{i.id}}</p>
+                        <p>{{data.id}}</p>
                     </div>
                 </div>
                 <div class="row" id="nomargin">
@@ -97,32 +69,30 @@ Latest commit 939c8d8 19 hours ago
                         <p><strong>Case:</strong>
                     </div>
                     <div class="col-md-6">
-                        <p>{{i.offense}}</p>
+                        <p>{{data.offense}}</p>
+                    </div>
+                </div>
+                <div class="row" id="nomargin">
+                    <div class="col-md-4">
+                        <p><strong>Case:</strong>
+                    </div>
+                    <div class="col-md-6">
+                        <p>{{data.caseStatus}}</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <div class="row" id="nomargin">
-                    <div class="col-md">
-                        <p><strong>Date of Complaint:</strong>
-                    </div>
-                    <div class="col-md">
-                       <p>______________________</p>
-                    </div>
-                </div>
-                <div class="row" id="nomargin">
-                    <div class="col-md">
-                        <p><strong>Date of Release:</strong>
-                    </div>
-                    <div class="col-md">
-                       <p>______________________</p>
+                    <div class="col-md-4">
+                        <p><strong>Date of Complaint: {{data.datenow}}</strong>
                     </div>
                 </div>
             </div>
         </div>
+        
         <h3>Case Description:</h3>
-            <p>{{i.caseDetails}}</p>    
-
+            <p>{{data.caseDescription}}</p>    
+        {% endfor %}
 
         <div class="row" id="nomargin">
             <div class="col-md-4">
@@ -151,16 +121,3 @@ Latest commit 939c8d8 19 hours ago
     
 </body>
 </html>
-© 2022 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
-Loading complete
