--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookupAdmin.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookupAdmin.html
@@ -70,7 +70,7 @@
       <hr>
       <h2>Required Information</h2>
 
-      <form onsubmit="event.preventDefault();return false">
+      <form onsubmit="event.preventDefault();">
         <div class="row">
           <div class="col-md-4 col-sm-12" id="lookupfname">
             <label for="searchALname" style="color: #eeee;">Offender's Full Name:</label>
