--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/registration.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/registration.html
@@ -66,7 +66,7 @@
                 {% csrf_token %}
                 <div class="row" id="nomargin">
                     <div class="col-md-4" id="barangayofficer">
-                        <label for="barangayofficer">Full Name :</label>
+                        <label for="barangayofficer">Officer's Name :</label>
                         <input type="text" class="form-control" name="barangayofficer" id="barangayofficer" placeholder="Enter your name here" required>
                     </div>
                 </div>
