--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/homepage.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/homepage.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid" style="padding: 0; overflow: hidden;">
         <div class="row">
             <div class="col-md-12 navbar">
                 <a href="/" class="logo navbar-brand text-white offset-md-2">Offender Locator</a>
