--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/login.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/login.html
@@ -29,8 +29,7 @@
             <ul class="navbar-nav ms-auto text-center">
               <li><a class="nav-link" href="/">Home</a></li>
               <li><a class="nav-link" href="/lookup">Lookup</a></li>
-              <li><a class="nav-link" href="/filecomplaint">File a complaint</a></li>
-              <li><a class="nav-link" href="/login">Login</a></li>
+              <li><a class="nav-link" href="/login">Admin</a></li>
             </ul>
         </div>
     </nav>
