--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookup.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookup.html
@@ -47,6 +47,7 @@
       <div class="collapse navbar-collapse" id="hamburger">
         <ul class="navbar-nav ms-auto text-center">
           <li><a class="nav-link" href="/">Home</a></li>
+          <li><a class="nav-link" href="/lookup"onclick="">About</a></li>
           <li><a class="nav-link" href="/lookup">Lookup</a></li>
           <li><a class="nav-link" href="/login">Admin</a></li>
         </ul>
