--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/accountmanager.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/accountmanager.html
@@ -43,7 +43,7 @@
         <ul class="navbar-nav ms-auto text-center">
           <li><a class="nav-link" href="/" onclick="logout()">Home</a></li>
           <li><a class="nav-link" href="/lookup"onclick="logout()">Lookup</a></li>
-          <li><a class="nav-link" href="/registration"onclick="logout()">Add Officer</a></li>
+          <li><a class="nav-link" href="/registration">Add Officer</a></li>
           
           <div class="btn-group">
             <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
@@ -58,23 +58,12 @@
     </nav>
     <hr>
     <div class="container-lg">
-      <h2>Directions:</h2>
-      <li>
-        Search for an offender's location and release date if they are
-        incarcerated and under the custody of the Barangay Anabu II-F City Hall,
-        Imus city of Cavite. Offenders who are not under Anabu II-F custody will
-        not appear in the search results.
-      </li>
-      <li>Type the Full name of the Offender.</li>
-      <li>Click the search button to see results.</li>
-      <hr>
-      <h2>Required Information</h2>
 
       <form onsubmit="event.preventDefault();">
         <div class="row">
           <div class="col-md-4 col-sm-12" id="lookupfname">
-            <label for="searchALname" style="color: #eeee;">Offender's Full Name:</label>
-            <input type="text" class="form-control" name="searchALname" id="searchALname" placeholder="John Doe" required>
+            <label for="searchALname" style="color: #eeee;">Officer's Name:</label>
+            <input type="text" class="form-control" name="searchALname" id="searchALname" placeholder="Juan Dela Cruz" required>
           </div>
         </div>
         <button type="submit" class="btn btn-outline-dark" id="searchAdminLookup" onclick="checkSearchAL()"><i class="fas fa-search"></i> Search</button>
@@ -83,7 +72,7 @@
       
     <hr style="margin-top: 5%;">
     <div class="container-lg">
-      <h2>SEARCH RESULTS:</h2>
+      <h2>Barangay Officers</h2>
       <div class="table-responsive-admin">
         <!-- Editable table -->
 
@@ -92,34 +81,19 @@
       <table class="table table-dark table-striped" id="adminTable"> 
         <thead>
           <tr>
-            <th class="text-center">Officer's Name</th>
             <th class="text-center">Username</th>
+            <th class="text-center">First Name</th>
+            <th class="text-center">Last Name</th>
             <th class="text-center">Action</th>
           </tr>
         </thead>
         <tbody>
-          {% for items in data1 %}
+          {% for items in data %}
             <tr>
-              <td>{{items.offender}}</th>
-              <td>{{items.id}}</td>
-              <td>{{items.age}}</td>
-              <td>{{items.gender}}</td>
-              <td>{{items.offense}}</td>
-              <form action="" method="post">
-                {% csrf_token %}
-              <td><select name="caseStatus" id="">
-                <option value="{{items.caseStatus}}" disabled selected>{{items.caseStatus}}</option>
-                <option value="Ongoing">Ongoing</option>
-                <option value="Released">Released</option>
-                <option value="Transferred">Transferred</option>
-              </select>
-            </td>
-              <td>{{items.datenow}}</td>
-              <td>
-                <input type="hidden" name="getID" value="{{items.id}}">
-                <button type = "submit" class="btn btn-success">Save</button>
-              </form>
-              </td>
+              <td>{{items.username}}</th>
+              <td>{{items.first_name}}</td>
+              <td>{{items.last_name}}</td>
+              <td><button>Remove</button></td>
             </tr>
             {% endfor %}
         </tbody>
