--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/login.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/login.html
@@ -42,7 +42,9 @@
                     <p>Enter required information</p>
                 </div>
             </div>
-            <form onsubmit="event.preventDefault();return false" >
+            {% comment %} <form onsubmit="event.preventDefault();return false" > {% endcomment %}
+            
+            <form action="" method="POST">   
                 {% csrf_token %}
                 <div class="row" id="nomargin">
                     <div class="col-md-4" >
@@ -65,6 +67,6 @@
         
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="{% static 'JavaScript/script.js' %}"></script>
+    {% comment %} <script src="{% static 'JavaScript/script.js' %}"></script> {% endcomment %}
 </body>
 </html>
