Add imageField in models.py

--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/homepage.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/homepage.html
@@ -22,7 +22,7 @@
                 <a href="/" class="logo navbar-brand text-white offset-md-2">Offender Locator</a>
                 <ul class="nav">
                     <li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
-                    <li><a class="nav-link" href="/lookup"onclick="">About</a></li>
+                    <li><a class="nav-link" href="/about"onclick="">About</a></li>
                     <li class="nav-item"><a href="/lookup" class="nav-link">Lookup</a></li>
                     <li class="nav-item"><a href="/login"class="nav-link">Admin</a></li>
                 </ul>
