Furnished the CRUD function on Database

--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/about.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/about.html
@@ -45,10 +45,8 @@
         <div class="collapse navbar-collapse" id="hamburger">
           <ul class="navbar-nav ms-auto text-center">
             <li><a class="nav-link" href="/">Home</a></li>
+            <li><a class="nav-link" href="/about">About</a></li>
             <li><a class="nav-link" href="/lookup">Lookup</a></li>
-            <li>
-              <a class="nav-link" href="/filecomplaint">File a complaint</a>
-            </li>
             <li><a class="nav-link" href="/login">Admin</a></li>
           </ul>
         </div>
