--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/login.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/login.html
@@ -19,6 +19,7 @@
 
 </head>
 <body>
+    
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="/">Offender Locator</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburger" 
@@ -28,6 +29,7 @@
         <div class="collapse navbar-collapse" id="hamburger">
             <ul class="navbar-nav ms-auto text-center">
               <li><a class="nav-link" href="/">Home</a></li>
+              <li><a class="nav-link" href="/about">About</a></li>
               <li><a class="nav-link" href="/lookup">Lookup</a></li>
               <li><a class="nav-link" href="/login">Admin</a></li>
             </ul>
@@ -64,7 +66,9 @@
                 </div>
             </form>
         </div>      
-        
+        <h3>{%for msg in messages %}
+            {{msg}}
+        {% endfor %}</h3>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     {% comment %} <script src="{% static 'JavaScript/script.js' %}"></script> {% endcomment %}
