--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/homepage.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/homepage.html
@@ -24,7 +24,7 @@
                     <li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
                     <li><a class="nav-link" href="/about"onclick="">About</a></li>
                     <li class="nav-item"><a href="/lookup" class="nav-link">Lookup</a></li>
-                    <li class="nav-item"><a href="/admin_lookup"class="nav-link">Admin</a></li>
+                    <li class="nav-item"><a href="/login"class="nav-link">Login</a></li>
                 </ul>
             </div>
             <!-- slider -->
