--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/login.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/login.html
@@ -31,7 +31,7 @@
               <li><a class="nav-link" href="/">Home</a></li>
               <li><a class="nav-link" href="/about">About</a></li>
               <li><a class="nav-link" href="/lookup">Lookup</a></li>
-              <li><a class="nav-link" href="/login">Admin</a></li>
+              <li><a class="nav-link" href="/login">Login</a></li>
             </ul>
         </div>
     </nav>
@@ -64,7 +64,12 @@
                         <button type="submit" class="btn btn-outline-dark" style="margin: auto;" id="login">Login</button>
                     </div>
                 </div>
+                <div class="col-md-4">
+                    <a href="/registration" class="link-light"><em>Barangay Official Register</em></a>
+                </div>
             </form>
+        
+
         </div>      
         <h3>{%for msg in messages %}
             {{msg}}
