--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/registration.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/registration.html
@@ -105,7 +105,7 @@
               class="form-control"
               name="authorizationcode"
               id="authcode"
-              placeholder="Authoriation Code"
+              placeholder="Authorization Code"
               required
             />
               </div>
